--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
 							<a class="tile" href="https://kitsu.io/anime/Mushoku-Tensei-II-Isekai-Ittara-Honki-Dasu-Part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47694/poster_image/large-b5bde230c0bff92d223d3f792cbd462a.jpeg" alt="Jobless Reincarnation Season 2 Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-7th-season"><img class="tile-image" src="https://media.kitsu.io/anime/47232/poster_image/large-e72a84111240e5a313fca1a65341303d.jpeg" alt="Hero Academia Season 7"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/Kimetsu-no-Yaiba-Hashira-Geikohen"><img class="tile-image" src="https://media.kitsu.io/anime/47635/poster_image/large-f12ea65ae61eaeb2e73595870b4308bc.jpeg" alt="Demon Slayer: Hashira Training Arc"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-9339f0b78a15d7b812d048f6ba19dffd.jpeg" alt="Laid Back Camp 3"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/unnamed-memory"><img class="tile-image" src="https://media.kitsu.io/anime/46921/poster_image/large-45d484cceadf1c9e391198c3d6909c33.jpeg" alt="Unnamed Memory"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-6671ae841d0897a9f999cb9417f7695b.jpeg" alt="Laid Back Camp 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img class="tile-image" src="https://media.kitsu.io/anime/46300/poster_image/large-31cc66fd5854cc555d496ced7ab40c31.jpeg" alt="Kaiju No.8"></img></a>
 						</div><!-- tiled-list -->						
 
@@ -193,7 +192,7 @@
 				
 					<div class="watching-item"><!--Please Dub -->
 						<h2 class="section-heading">Please Dub!</h2>
-						<div class="tiled-list scrolling-tiled-list">												
+						<div class="tiled-list scrolling-tiled-list">
 							<a class="tile" href="https://kitsu.io/anime/seishun-buta-yarou-wa-bunny-girl-senpai-no-yume-wo-minai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41056/large.jpg?1597698765" alt="Rascal Does Not Dream of Bunny Girl Senpai"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/skip-to-loafer"><img class="tile-image" src="https://media.kitsu.io/anime/45520/poster_image/large-bc121442f312da08b24f1a56e2cb2040.jpeg" alt="Skip and Loafer"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/wotaku-ni-koi-wa-muzukashii"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13660/large.jpg?1597696908" alt="Wotakoi: Love Is Hard for Otaku"></img></a>
@@ -202,29 +201,31 @@
 							<a class="tile" href="https://kitsu.io/anime/bocchi-the-rock"><img class="tile-image" src="https://media.kitsu.io/anime/44196/poster_image/large-04fc7c066e52d4d2b9d0217b383597bb.jpeg" alt="Bocchi the Rock!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kimi-wa-houkago-insomnia"><img class="tile-image" src="https://media.kitsu.io/anime/45746/poster_image/large-45e04c601dd80245037ab7b8ec5a0c4a.jpeg" alt="Insomniacs After School"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kemono-no-souja-erin"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/4095/large.jpg" alt="Erin"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kyousougiga-tv"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7870/large.jpg" alt="Kyousougiga"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/uchouten-kazoku"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7675/large.jpg" alt="The Eccentric Family"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/kishuku-gakkou-no-juliet"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-tv"><img class="tile-image" src="https://media.kitsu.io/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/nisekoi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/banana-fish"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13988/large.jpg" alt="Banana Fish"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img class="tile-image" src="https://media.kitsu.io/anime/45715/poster_image/large-d863bff0eb6e0e49b30da61229bbd598.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/amaama-to-inazuma"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11870/large.jpg" alt="Sweetness & Lightning"></img></a>
+							<!--							
+								<a class="tile" href="https://kitsu.io/anime/kyousougiga-tv"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7870/large.jpg" alt="Kyousougiga"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/uchouten-kazoku"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7675/large.jpg" alt="The Eccentric Family"></img></a>							
+								<a class="tile" href="https://kitsu.io/anime/kishuku-gakkou-no-juliet"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-tv"><img class="tile-image" src="https://media.kitsu.io/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/nisekoi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/banana-fish"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13988/large.jpg" alt="Banana Fish"></img></a>							
+								<a class="tile" href="https://kitsu.io/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img class="tile-image" src="https://media.kitsu.io/anime/45715/poster_image/large-d863bff0eb6e0e49b30da61229bbd598.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>							
+								<a class="tile" href="https://kitsu.io/anime/amaama-to-inazuma"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11870/large.jpg" alt="Sweetness & Lightning"></img></a>
+							-->
 						</div><!-- tiled-list -->
 					</div><!-- Please Dub-->
 
 
 					<div class="watching-item"><!--Please More Seasons! -->
 						<h2 class="section-heading">Please More Seasons!</h2>
-						<div class="tiled-list scrolling-tiled-list">												
+						<div class="tiled-list scrolling-tiled-list">
+							<a class="tile" href="https://kitsu.io/anime/sousou-no-frieren"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Frieren_Large.jpeg" alt="Frieren"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/magi-the-labyrinth-of-magic"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Magi_large.jpg" alt="Magi: The Labyrinth of Magic"></img><span class="tooltip">Magi: The Labyrinth of Magic</span></a>
 							<a class="tile" href="https://kitsu.io/anime/new-game"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/New-Game_large.jpg" alt="New Game!"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Snowwhite_large.jpg" alt="Snow White with the Red Hair"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Over-the-Moon-For-You_large.jpg" alt="TONIKAWA: Over the Moon For You"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shadows-house"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shadows-House_Large.jpg" alt="Shadows House"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Snowwhite_large.jpg" alt="Snow White with the Red Hair"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekujou-shisho-ni-naru-tame-niwa-shudan-o-erandeiramasen"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Ascendance-of-a-Bookworm_large.jpg" alt="Ascendance of a Bookworm"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Over-the-Moon-For-You_large.jpg" alt="TONIKAWA: Over the Moon For You"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shadows-house"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shadows-House_Large.jpg" alt="Shadows House"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/demi-chan-wa-kataritai"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Demi-chan_large.jpg" alt="Interviews With Monster Girls"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tondemo-skill-de-isekai-hourou-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46676/poster_image/large-ac8c77c613ea90d3282cc2b87ea4aa6e.jpeg" alt="Campfire Cooking in Another World with My Absurd Skill"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Please More Seasons! -->					
 				</div><!-- watching -->
@@ -256,8 +257,8 @@
 							<div class="card-tiled-list">
 								<a class="tile" href="https://kitsu.io/anime/fate-zero"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Fate-Zero_large.jpg" alt="Fate Zero"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/one-punch-man"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/One-Punch-Man_large.jpg" alt="One-Punch Man"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/shangri-la-frontier"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shangri-La-Frontier_Large.jpeg" alt="Shangri-La Frontier"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/mob-psycho-100"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Mob-Psycho-100_large.jpeg" alt="Mob Psycho 100"></img></a>								
+								<a class="tile" href="https://kitsu.io/anime/shangri-la-frontier"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shangri-La-Frontier_Large.jpeg" alt="Shangri-La Frontier"></img></a>
 								<!--
 									<a class="tile" href=""><img  loading="Lazy" class="tile-image" src="" alt=""></img></a>
 									<a class="tile" href="https://kitsu.io/anime/attack-on-titan"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Attack-on-Titan_large.jpg" alt="Attack on Titan"></img></a>
@@ -267,8 +268,8 @@
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Adventure</h4>
 							<div class="card-tiled-list">
-								<a class="tile" href="https://kitsu.io/anime/vinland-saga"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Vinland-Saga_large.jpg" alt="Vinland Saga"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/sousou-no-frieren"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Frieren_Large.jpeg" alt="Frieren"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/vinland-saga"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Vinland-Saga_large.jpg" alt="Vinland Saga"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/dororo"><img class="tile-image" src="assets/images/thumbnails/Posters/Dororo_large.jpg" alt="Dororo"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/seirei-no-moribito"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Moribito_large.jpg" alt="Moribito"></img></a>								
 								<!--
@@ -290,11 +291,11 @@
 						</div><!--Comedy-->			
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Daily Life</h4>
-							<div class="card-tiled-list">						
-								<a class="tile" href="https://kitsu.io/anime/spy-x-family"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/spy-x-family_large.jpeg" alt="SPY x FAMILY"></img></a>
+							<div class="card-tiled-list">
 								<a class="tile" href="https://kitsu.io/anime/sakura-quest"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Sakura-Quest_large.jpg" alt="Sakura Quest"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/demi-chan-wa-kataritai"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Demi-chan_large.jpg" alt="Interviews With Monster Girls"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/barakamon"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Barakamon_large.jpg" alt="Barakamon"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/spy-x-family"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/spy-x-family_large.jpeg" alt="SPY x FAMILY"></img></a>
 							</div>
 						</div><!--Daily Life-->
 						<div class="tiled-list-card">
@@ -341,9 +342,9 @@
 							<h4 class="tile-card-heading">Isekai</h4>
 							<div class="card-tiled-list">														
 								<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Mushoku-Tensei_large.jpg" alt="Mushoku Tensei"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/overlord"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/overlord_large.jpg" alt="Overlord"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/That-Time-I-Got-Reincarnated-as-a-Slime_large.jpg" alt="That Time I Got Reincarnated as a Slime"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekujou-shisho-ni-naru-tame-niwa-shudan-o-erandeiramasen"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Ascendance-of-a-Bookworm_large.jpg" alt="Ascendance of a Bookworm"></img></a>								
+								<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekujou-shisho-ni-naru-tame-niwa-shudan-o-erandeiramasen"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Ascendance-of-a-Bookworm_large.jpg" alt="Ascendance of a Bookworm"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/overlord"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/overlord_large.jpg" alt="Overlord"></img></a>
 							</div>
 						</div><!--Isekai-->						
 						<div class="tiled-list-card">
