--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo-3"><img class="tile-image" src="https://media.kitsu.io/anime/44911/poster_image/large-8a42bb8e9658fb275a902a821a797be9.jpeg" alt="KonoSuba 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46729/poster_image/large-4b30dd0d5a2559d47365fa80caa9a923.jpeg" alt="That Time I Got Reincarnated as a Slime Season 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/Mushoku-Tensei-II-Isekai-Ittara-Honki-Dasu-Part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47694/poster_image/large-b5bde230c0bff92d223d3f792cbd462a.jpeg" alt="Jobless Reincarnation Season 2 Part 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/dungeon-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46320/poster_image/large-a0b06697525bec9e7aa10c86b9a07583.jpeg" alt="Delicious in Dungeon"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/dungeon-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46320/poster_image/large-9d404bdee1ca826c60e32864e0502999.jpeg" alt="Delicious in Dungeon"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu-2"><img class="tile-image" src="https://media.kitsu.io/anime/45235/poster_image/large-a9217949be9a05b93beba240ee401d36.jpeg" alt="Tsukimichi -Moonlit Fantasy- 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-6671ae841d0897a9f999cb9417f7695b.jpeg" alt="Laid Back Camp 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/re-monster"><img class="tile-image" src="https://media.kitsu.io/anime/47964/poster_image/large-48b6b7fe2b3066d3d751ce2ff4709f87.jpeg" alt="Re:Monster"></img></a>
@@ -178,12 +178,22 @@
 							<a class="tile" href="https://kitsu.io/anime/Kimetsu-no-Yaiba-Hashira-Geikohen"><img class="tile-image" src="https://media.kitsu.io/anime/47635/poster_image/large-f12ea65ae61eaeb2e73595870b4308bc.jpeg" alt="Demon Slayer: Hashira Training Arc"></img></a>
 						</div><!-- tiled-list -->						
 
+						<h3 class="section-subheading">Summer 2024</h3> 
+						<div class="tiled-list scrolling-tiled-list">
+							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45159/large.jpg" alt="Fairy Tail: 100 Years Quest"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/47659/poster_image/large-7ecf55686883c1bdea39f22ec5a72216.jpeg" alt="Oshi no Ko Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/madougushi-dahlia-wa-utsumukanai"><img class="tile-image" src="https://media.kitsu.io/anime/47892/poster_image/large-3fd1a21d91b3d15272f019c74e73adbc.jpeg" alt="Dahlia in Bloom: Crafting a Fresh Start with Magical Tools"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tower-of-god-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46312/poster_image/large-33aed078a19ee6d0e2abdd57ef0e0bb5.jpeg" alt="Tower of God Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/isekai-shikkaku"><img class="tile-image" src="https://media.kitsu.io/anime/46243/poster_image/large-cf4b8e6822213be137cb4410e7f576cf.jpeg" alt="No Longer Human…In Another World"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kimi-to-boku-no-saigo-no-senjou-aruiwa-sekai-ga-hajimaru-seisen-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45272/poster_image/large-5f928f55eaa9e41087a9b0bc396e211a.jpeg" alt="Our Last Crusade or the Rise of a New World Season 2"></img></a>
+						</div><!-- tiled-list -->			
+
 						<h3 class="section-subheading">Later</h3> 
 						<div class="tiled-list scrolling-tiled-list">
 							<a class="tile" href="https://kitsu.io/anime/re-zero-kara-hajimeru-isekai-seikatsu-3"><img class="tile-image" src="https://media.kitsu.io/anime/47235/poster_image/large-2fbd9ca9f8f9b39d931a34221ebb3d8f.jpeg" alt="Re:ZERO 3"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-v"><img class="tile-image" src="https://media.kitsu.io/anime/48216/poster_image/large-8ff94897751cfa48dfc8562ed1369421.jpeg" alt="DanMachi Goddess of the Harvest Arc"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-4th-season"><img class="tile-image" src="https://media.kitsu.io/anime/48293/poster_image/large-c9ec8ab688dddcc27d1664c9acfc580a.jpeg" alt="Ascendance of a Bookworm Season 4"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/new-panty-and-stocking"><img class="tile-image" src="https://media.kitsu.io/anime/46227/poster_image/large-c95422b3ba822385ebcca32c44fa2160.jpeg" alt="NEW PANTY AND STOCKING"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kimi-to-boku-no-saigo-no-senjou-aruiwa-sekai-ga-hajimaru-seisen-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45272/poster_image/large-5f928f55eaa9e41087a9b0bc396e211a.jpeg" alt="Our Last Crusade or the Rise of a New World Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45159/large.jpg" alt="Fairy Tail: 100 Years Quest"></img></a>							
 						</div><!-- tiled-list -->
 					</div><!-- Most Anticipated -->
 				
@@ -856,6 +866,24 @@
 							<div class="lf-text">
 								<span class="lf-displayname">Manga Alerts</span>
 								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @MangaAlerts</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-forcollections" href="https://fandompost.vbulletin.net/forum/anime-manga-discussions/us-blu-ray-dvd-and-simulcast-industry-news/858486-crunchyroll-may-2024-solicitations-no-solicitations-for-april-24">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/WTK_the-fandom-post.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Crunchyroll No Physical Releases</span>
+								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> fandompost.vbulletin.net</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-forcollections" href="https://docs.google.com/spreadsheets/d/1iEnl6T-Rm_D-h5-Px3kTPUptv1tqDFiBgX1VRe48Sm4/edit?pli=1#gid=0">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/gsheets.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Funimation Titles Not Transferred</span>
+								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> google.com/spreadsheets</span>
 							</div>
 						</div>
 					</a>
