--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 			<div id="nav">
 				<button onclick="tab_selct('nav_about', 'tab_about')" id="nav_about" class="nav-item first-nav-item">About</button>
-				<!-- <button onclick="tab_selct()" id="nav_spotlight" class="nav-item nav-item-active nav-item-selected">Spotlight</button> -->
-				<button onclick="tab_selct('nav_watching', 'tab_watching')" id="nav_watching" class="nav-item nav-item-selected">Watching</button>				
+				<button onclick="tab_selct('nav_spotlight', 'tab_spotlight')" id="nav_spotlight" class="nav-item nav-item-active nav-item-selected">Spotlight</button>
+				<button onclick="tab_selct('nav_watching', 'tab_watching')" id="nav_watching" class="nav-item">Watching</button>
 				<button onclick="tab_selct('nav_favorites', 'tab_favorites')" id="nav_favorites" class="nav-item">Favorites</button>
 				<button onclick="tab_selct('nav_linksandfollows', 'tab_linksandfollows')" id="nav_linksandfollows" class="nav-item">Links and Follows</button>
 			</div><!-- Nav -->
@@ -76,12 +76,92 @@
 			</div><!-- about -->
 
 			<div id="main">
+				<div id="tab_spotlight" class="tab tab-actionable main-item">
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
+							Holo and Lawrence Are Back!!!
+						</h2>
+						<p class="spotlight-article-text">
+							I remember watching the original so many years ago and it quickly became one of my all-time favorites, and still is today.I was elated but anxious to hear this new adaptation was being made. However, my concerns have been so far joyfully unfounded. The animation is beautiful, I’m so incredibly happy Brina Palencia and J. Michael Tatum returned to voice our main leads, and Kevin Penkin’s OST is soo good!
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Holo_and_Lawrence_Are_Back/article-media_01.png" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/spice-and-wolf-merchant-meets-the-wise-wolf">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-imageA" src="assets/images/spotlight-article-media/Holo_and_Lawrence_Are_Back/article-source_01.jpeg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">Spice and Wolf: merchant meets the wise wolf</h4>
+							</a>
+						</div>
+					</div>					
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
+							An underrated one season wonder!
+						</h2>
+						<p class="spotlight-article-text">
+							A self-contained, 12 episode, fairly recent show; a compelling and interesting sci-fi mystery with developed characters; and an ending with all plot points neatly tied up!
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/An_underrated_one_season_wonder/article-media_01.png" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/kanata-no-astra">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-imageA" src="assets/images/spotlight-article-media/An_underrated_one_season_wonder/article-source_01.jpg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">ASTRA Lost In Space</h4>
+							</a>
+						</div>
+					</div>
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
+							Gorgeous aesthetic and I’m hooked on the suspense!
+						</h2>
+						<p class="spotlight-article-text">
+							Emilico and Kate are adorable; the classic Victorian style and setting are my favorite; the premise is interestingly unique; Ghibli soot sprites are just built different haha! I had no idea what to expect, but wow, been a while since I got pulled in like this.
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Gorgeous_aesthetic_and_I’m_hooked_on_the_suspense/article-media_01.jpg" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/shadows-house">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-imageA" src="assets/images/spotlight-article-media/Gorgeous_aesthetic_and_I’m_hooked_on_the_suspense/article-source_01.jpg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">Shadows House</h4>
+							</a>
+						</div>
+					</div>
+
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
+							Adorable, must protec, and total Spice and Wolf vibes!
+						</h2>
+						<p class="spotlight-article-text">
+							I love the characters, entertaining economics and negotiations, this setting and time period are my favorite, and just the little bit of magic to keep it interesting. I completely did not expect to like this show as much as I do.
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Adorable_must_protec_and_total_Spice_and_Wolf_vibes/article-media_01.png" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/honzuki-no-gekujou-shisho-ni-naru-tame-niwa-shudan-o-erandeiramasen">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-imageA" src="assets/images/spotlight-article-media/Adorable_must_protec_and_total_Spice_and_Wolf_vibes/article-source_01.jpg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">Ascendance of a Bookworm</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				
 				<div id="tab_watching" class="tab tab-actionable main-item">
 					<div class="watching-item"><!--Currently Watching-->
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->												
-							<a class="tile" href="https://kitsu.io/anime/spice-and-wolf-shin-anime"><img class="tile-image" src="https://media.kitsu.io/anime/45930/poster_image/large-44e5be35bb68c3b4d473ff9d33dba175.jpeg" alt="Spice and Wolf (New Anime)"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/spice-and-wolf-shin-anime"><img class="tile-image" src="https://media.kitsu.io/anime/45930/poster_image/large-44e5be35bb68c3b4d473ff9d33dba175.jpeg" alt="Spice and Wolf (New Anime)"></img>a</a>
 							<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img class="tile-image" src="https://media.kitsu.io/anime/46300/poster_image/large-31cc66fd5854cc555d496ced7ab40c31.jpeg" alt="Kaiju No.8"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo-3"><img class="tile-image" src="https://media.kitsu.io/anime/44911/poster_image/large-8a42bb8e9658fb275a902a821a797be9.jpeg" alt="KonoSuba 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46729/poster_image/large-4b30dd0d5a2559d47365fa80caa9a923.jpeg" alt="That Time I Got Reincarnated as a Slime Season 3"></img></a>
